--- a/test.html
+++ b/test.html
@@ -3,17 +3,15 @@
 <head>
 <meta charset="UTF-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover"/>
-<title>Tenant Intro + Directory Loop (Premium)</title>
+<title>Tenant Intro + Directory Loop (Premium Corporate)</title>
 <style>
   html, body {
-    margin: 0;
-    padding: 0;
-    width: 100vw;
-    height: 100vh;
+    margin: 0; padding: 0;
+    width: 100vw; height: 100vh;
     overflow: hidden;
     font-family: "Poppins", sans-serif;
-    background: #0d0d0d;
-    color: #fff;
+    background: #0e1117;
+    color: #222;
   }
 
   canvas#particles {
@@ -30,144 +28,150 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 0;
     box-sizing: border-box;
     z-index: 1;
     overflow: hidden;
-    transition: opacity 0.8s ease, transform 0.8s ease;
+    transition: opacity 0.8s ease;
   }
 
-  /* Transparent fullscreen intro */
+  /* --- Intro Fullscreen --- */
   .intro-fullscreen {
-    width: 100%;
-    height: 100%;
+    width: 100%; height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: stretch;
-    animation: fadeInUp 1s ease forwards;
-    color: #fff;
+    background: linear-gradient(135deg,#f8f9fa,#e9ecef);
+    color: #222;
     padding: 2vh 2vw;
     box-sizing: border-box;
+    animation: fadeIn 0.8s ease forwards;
   }
 
-  /* Top bar with glass effect */
+  /* --- Header --- */
   .intro-header {
     display: flex;
     justify-content: space-between;
     align-items: center;
     width: 100%;
     padding: 1vh 2vw;
+    backdrop-filter: blur(10px);
+    background: rgba(255,255,255,0.3);
+    border-radius: 12px;
+    box-shadow: 0 6px 20px rgba(0,0,0,0.1);
     margin-bottom: 4vh;
-    position: sticky;
-    top: 0;
-    backdrop-filter: blur(12px);
-    background: rgba(255, 255, 255, 0.1);
-    border-radius: 16px;
-    box-shadow: 0 4px 20px rgba(0,0,0,0.3);
+    opacity: 0; transform: translateY(-30px);
+    animation: slideDown 0.8s ease forwards;
   }
 
   .intro-header img {
-    height: 10vh;
-    width: 10vh;
-    border-radius: 14px;
+    height: 9vh; width: 9vh;
+    border-radius: 12px;
     background: #fff;
     padding: 0.5vh;
     object-fit: contain;
-  }
-
-  .intro-header .tenant-name {
-    font-size: 5vh;
-    font-weight: 900;
-    text-align: right;
-    flex: 1;
-    padding-left: 2vw;
-    background: linear-gradient(90deg, #00ffcc, #00aaff, #ff00cc);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    animation: gradientFlow 5s ease infinite;
-    background-size: 200% 200%;
-  }
-
-  @keyframes gradientFlow {
-    0%{background-position:0% 50%;}
-    50%{background-position:100% 50%;}
-    100%{background-position:0% 50%;}
-  }
-
-  /* Big logo with animation */
-  .intro-logo {
-    max-width: 60vw;
-    max-height: 30vh;
-    margin: 0 auto 3vh auto;
-    object-fit: contain;
+    box-shadow: 0 4px 12px rgba(0,0,0,0.2);
     animation: floatLogo 4s ease-in-out infinite;
   }
 
-  @keyframes floatLogo {
-    0% { transform: translateY(0) scale(1); }
-    50% { transform: translateY(-10px) scale(1.05); }
-    100% { transform: translateY(0) scale(1); }
+  .intro-header .tenant-name {
+    font-size: 4.5vh;
+    font-weight: 800;
+    text-align: right;
+    flex: 1;
+    padding-left: 2vw;
+    background: linear-gradient(90deg,#007bff,#00c6ff);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    position: relative;
   }
 
-  /* Details inside glass card */
+  .intro-header .tenant-name::after {
+    content: "";
+    position: absolute;
+    bottom: -4px; left: 0;
+    width: 0%; height: 3px;
+    background: linear-gradient(90deg,#007bff,#00c6ff);
+    animation: underline 1.2s ease forwards;
+    animation-delay: 0.4s;
+  }
+
+  /* --- Big logo --- */
+  .intro-logo {
+    max-width: 65vw;
+    max-height: 25vh;
+    margin: 3vh auto 3vh auto;
+    object-fit: contain;
+    opacity: 0; transform: scale(0.85);
+    animation: zoomIn 0.9s ease 0.3s forwards;
+  }
+
+  /* --- Details card --- */
   .intro-details {
-    font-size: 2.2vh;
+    font-size: 2.3vh;
     line-height: 1.6;
-    text-align: left;
-    max-width: 90vw;
+    max-width: 85vw;
     margin: 0 auto;
-    padding: 2vh;
-    border-radius: 16px;
-    background: rgba(255, 255, 255, 0.08);
-    backdrop-filter: blur(10px);
-    box-shadow: 0 6px 30px rgba(0,0,0,0.4);
-  }
-
-  .intro-details h2 {
-    margin-top: 0;
-    color: #00ffcc;
-  }
-
-  /* Directory view with glass cards */
-  .directory-container {
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
     padding: 2vh 2vw;
+    background: rgba(255,255,255,0.75);
+    border-radius: 18px;
+    box-shadow: 0 8px 25px rgba(0,0,0,0.15);
+    opacity: 0; transform: translateY(25px);
+    animation: fadeUp 1s ease 0.6s forwards;
+  }
+  .intro-details h2 {
+    margin-top: 0; font-size: 2.8vh; color: #007bff;
+  }
+
+  /* --- Directory --- */
+  .directory-container {
+    width: 100%; height: 100%;
+    overflow: hidden;
+    padding: 3vh 2vw;
+    background: rgba(255,255,255,0.8);
+    border-radius: 16px;
     box-sizing: border-box;
-    color: #fff;
+    animation: fadeIn 1s ease forwards;
   }
 
   .directory-title {
-    font-size: 5vh;
-    font-weight: bold;
+    font-size: 4.5vh;
+    font-weight: 700;
     text-align: center;
     margin-bottom: 3vh;
-    background: linear-gradient(90deg, #ff00cc, #00ffcc);
+    background: linear-gradient(90deg,#007bff,#00c6ff);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-    animation: gradientFlow 5s ease infinite;
+  }
+
+  .directory-header {
+    display: flex;
+    justify-content: space-between;
+    font-weight: bold;
+    margin-bottom: 1.5vh;
+    font-size: 3vh;
+    border-bottom: 2px solid #333;
+    padding-bottom: 0.5vh;
   }
 
   .floor-section {
+    background: rgba(255,255,255,0.6);
+    border-radius: 12px;
+    padding: 1.2vh 1vw;
+    margin-bottom: 2vh;
+    box-shadow: 0 3px 10px rgba(0,0,0,0.08);
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin-bottom: 3vh;
     flex-wrap: wrap;
-    background: rgba(255,255,255,0.08);
-    backdrop-filter: blur(8px);
-    padding: 1.5vh 2vw;
-    border-radius: 14px;
-    box-shadow: 0 4px 20px rgba(0,0,0,0.3);
+    transition: transform 0.3s ease;
   }
+  .floor-section:hover { transform: scale(1.02); }
 
   .floor-section div:first-child {
-    font-size: 3vh;
-    font-weight: bold;
-    color: #00ffcc;
+    font-size: 2.8vh;
     min-width: 80px;
+    font-weight: 600;
   }
 
   .tenant-logos {
@@ -178,26 +182,38 @@
   }
 
   .tenant-logos img {
-    height: 7vh;
-    width: auto;
+    height: 7vh; width: auto;
     object-fit: contain;
-    filter: drop-shadow(0 4px 6px rgba(0,0,0,0.5));
-    transition: transform 0.3s ease;
+    transition: all 0.3s ease;
+    border-radius: 6px;
+    background: #fff;
+    padding: 3px;
+    box-shadow: 0 2px 8px rgba(0,0,0,0.1);
   }
   .tenant-logos img:hover {
-    transform: scale(1.1);
+    transform: scale(1.12);
+    box-shadow: 0 4px 15px rgba(0,0,0,0.15);
   }
 
-  @keyframes fadeInUp {
-    0%{opacity:0; transform:translateY(4vh);}
-    100%{opacity:1; transform:translateY(0);}
+  /* --- Animations --- */
+  @keyframes fadeIn { from{opacity:0;} to{opacity:1;} }
+  @keyframes slideDown { to{opacity:1; transform:translateY(0);} }
+  @keyframes zoomIn { to{opacity:1; transform:scale(1);} }
+  @keyframes fadeUp { to{opacity:1; transform:translateY(0);} }
+  @keyframes floatLogo {
+    0%,100% { transform: translateY(0); }
+    50% { transform: translateY(-8px); }
   }
+  @keyframes underline { from{width:0;} to{width:100%;} }
+  @keyframes fadeOut { to{opacity:0; transform:translateX(-40px);} }
+  .fade-out { animation: fadeOut 0.6s ease forwards; }
 
-  @media (max-width: 768px){
-    .intro-header .tenant-name { font-size: 6vw; }
+  @media (max-width:768px){
+    .intro-header .tenant-name { font-size: 5vw; }
     .intro-details { font-size: 3.5vw; }
-    .directory-title { font-size: 6vw; }
-    .tenant-logos img { height: 12vw; }
+    .directory-title { font-size: 5.5vw; }
+    .directory-header { font-size: 4vw; }
+    .tenant-logos img { height: 10vw; }
   }
 </style>
 </head>
@@ -246,7 +262,8 @@ onValue(floorsRef,(snapshot)=>{
           description: tenantsObj[key].description || "Welcome to our company.",
           core: tenantsObj[key].core || "N/A",
           contact: tenantsObj[key].contact || "N/A",
-          email: tenantsObj[key].email || "N/A"
+          email: tenantsObj[key].email || "N/A",
+          theme: tenantsObj[key].theme || "#f8f9fa,#e9ecef"
         });
       });
     }
@@ -257,19 +274,20 @@ onValue(floorsRef,(snapshot)=>{
   function showNextTenant(){
     tenantIntro.style.display="flex";
     directoryView.style.display="none";
-    tenantIntro.style.opacity = "0";
-    tenantIntro.style.transform = "translateX(50px)";
-    setTimeout(()=>{ tenantIntro.style.opacity = "1"; tenantIntro.style.transform = "translateX(0)"; },50);
     tenantIntro.innerHTML = "";
 
     if(currentIndex < tenantsSequence.length){
       const tenant = tenantsSequence[currentIndex];
       const wrapper = document.createElement("div");
       wrapper.className = "intro-fullscreen";
+      wrapper.style.background = `linear-gradient(135deg,${tenant.theme})`;
 
       const header = document.createElement("div");
       header.className = "intro-header";
-      header.innerHTML = `<img src="${tenant.logo}" alt="logo"/><div class="tenant-name">${tenant.name}</div>`;
+      header.innerHTML = `
+        <img src="${tenant.logo}" alt="logo"/>
+        <div class="tenant-name">${tenant.name}</div>
+      `;
       wrapper.appendChild(header);
 
       const bigLogo = document.createElement("img");
@@ -292,7 +310,10 @@ onValue(floorsRef,(snapshot)=>{
       tenantIntro.appendChild(wrapper);
 
       currentIndex++;
-      setTimeout(showNextTenant,10000);
+      setTimeout(()=>{
+        wrapper.classList.add("fade-out");
+        setTimeout(showNextTenant,700);
+      },9000);
     } else {
       showDirectory();
     }
@@ -311,13 +332,17 @@ onValue(floorsRef,(snapshot)=>{
     title.textContent = "Tenant Directory";
     container.appendChild(title);
 
+    const headerRow = document.createElement("div");
+    headerRow.className = "directory-header";
+    headerRow.innerHTML = `<span>Floor</span><span>Block Name</span>`;
+    container.appendChild(headerRow);
+
     Object.keys(data).forEach(floor=>{
       const floorSection = document.createElement("div");
       floorSection.className = "floor-section";
 
       const floorNum = document.createElement("div");
       floorNum.textContent = ordinal(Number(floor));
-
       const logosDiv = document.createElement("div");
       logosDiv.className = "tenant-logos";
 
@@ -337,63 +362,75 @@ onValue(floorsRef,(snapshot)=>{
 
     directoryView.appendChild(container);
 
-    // Auto scroll
     let scrollAmount = 0;
     const maxScroll = container.scrollHeight - container.clientHeight;
-    const scrollStep = maxScroll / 200;
+    const scrollStep = maxScroll / 240;
     const scrollInterval = setInterval(()=>{
       scrollAmount += scrollStep;
-      if(scrollAmount >= maxScroll){
-        scrollAmount = maxScroll;
-      }
+      if(scrollAmount >= maxScroll) scrollAmount = maxScroll;
       container.scrollTo({top: scrollAmount, behavior:"smooth"});
-    },50);
+    },60);
 
     setTimeout(()=>{
       clearInterval(scrollInterval);
       currentIndex = 0;
       showNextTenant();
-    },20000);
+    },22000);
   }
 
   showNextTenant();
 });
 
-// Premium glowing particles
+/* --- Premium Particles --- */
 const canvas = document.getElementById("particles");
 const ctx = canvas.getContext("2d");
 let particlesArray = [];
+
 function initParticles(){
   canvas.width = window.innerWidth;
   canvas.height = window.innerHeight;
   particlesArray=[];
-  for(let i=0;i<80;i++){
+  for(let i=0;i<120;i++){
     particlesArray.push({
       x: Math.random()*canvas.width,
       y: Math.random()*canvas.height,
-      r: Math.random()*4+2,
-      dx: (Math.random()-0.5)*0.7,
-      dy: (Math.random()-0.5)*0.7,
-      color: `hsla(${Math.random()*360},100%,50%,0.6)`
+      r: Math.random()*2+1,
+      dx: (Math.random()-0.5)*0.4,
+      dy: (Math.random()-0.5)*0.4
     });
   }
 }
+
 function animateParticles(){
   ctx.clearRect(0,0,canvas.width,canvas.height);
-  particlesArray.forEach(p=>{
+  ctx.fillStyle="rgba(0,200,255,0.8)";
+  particlesArray.forEach((p,i)=>{
     ctx.beginPath();
     ctx.arc(p.x,p.y,p.r,0,Math.PI*2);
-    ctx.fillStyle=p.color;
-    ctx.shadowBlur=20;
-    ctx.shadowColor=p.color;
     ctx.fill();
+
+    // Connect lines
+    for(let j=i+1;j<particlesArray.length;j++){
+      const p2 = particlesArray[j];
+      const dist = Math.hypot(p.x-p2.x,p.y-p2.y);
+      if(dist<120){
+        ctx.strokeStyle="rgba(0,200,255,0.15)";
+        ctx.lineWidth=1;
+        ctx.beginPath();
+        ctx.moveTo(p.x,p.y);
+        ctx.lineTo(p2.x,p2.y);
+        ctx.stroke();
+      }
+    }
+
     p.x+=p.dx; p.y+=p.dy;
     if(p.x<0||p.x>canvas.width) p.dx*=-1;
     if(p.y<0||p.y>canvas.height) p.dy*=-1;
   });
   requestAnimationFrame(animateParticles);
 }
-window.addEventListener("resize",()=>{ initParticles(); });
+
+window.addEventListener("resize",initParticles);
 initParticles();
 animateParticles();
 </script>
