--- a/admin.html
+++ b/admin.html
@@ -1,68 +1,108 @@
-<!DOCTYPE html> 
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
   <title>Admin - Manage Clients</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <style>
+    /* Premium scrollbars */
+    ::-webkit-scrollbar {
+      width: 8px;
+    }
+    ::-webkit-scrollbar-track {
+      background: #1f2937;
+      border-radius: 4px;
+    }
+    ::-webkit-scrollbar-thumb {
+      background: #6366f1;
+      border-radius: 4px;
+    }
+    ::-webkit-scrollbar-thumb:hover {
+      background: #4f46e5;
+    }
+
+    /* Card hover animation */
+    .card-hover:hover {
+      transform: translateY(-3px);
+      transition: all 0.3s ease;
+      box-shadow: 0 12px 24px rgba(0,0,0,0.4);
+    }
+
+    /* Gradient buttons */
+    .btn-gradient {
+      background: linear-gradient(to right, #6366f1, #a78bfa);
+    }
+    .btn-gradient:hover {
+      background: linear-gradient(to right, #4f46e5, #8b5cf6);
+    }
+
+    /* Gradient text headers */
+    .gradient-text {
+      background: linear-gradient(to right, #f97316, #facc15);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+    }
+  </style>
 </head>
-<body class="bg-gray-900 text-white p-6">
-  <h1 class="text-3xl font-extrabold mb-6 text-orange-400 text-center">Admin - Manage Clients</h1>
+<body class="bg-gray-900 text-white p-6 font-sans">
+
+  <!-- Page Title -->
+  <h1 class="text-4xl font-extrabold mb-10 text-center gradient-text drop-shadow-lg">
+    Admin Panel - Manage Tenants & Ads
+  </h1>
 
   <!-- Add/Edit Tenant Form -->
-  <form id="addForm" class="space-y-4 mb-8 bg-gray-800 p-6 rounded-lg shadow-lg max-w-4xl mx-auto">
-    <h2 class="text-xl font-bold mb-4 text-white">Add / Edit Tenant</h2>
+  <form id="addForm" class="space-y-6 mb-12 bg-gradient-to-br from-gray-800/90 to-gray-700/70 p-8 rounded-2xl shadow-2xl max-w-5xl mx-auto backdrop-blur-sm border border-gray-700">
+    <h2 class="text-2xl font-bold mb-6 text-white border-b border-gray-600 pb-2">Add / Edit Tenant</h2>
 
-    <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
-      <select id="block" class="p-3 bg-gray-700 rounded w-full text-white">
+    <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+      <select id="block" class="p-4 bg-gray-700 rounded-lg w-full text-white focus:ring-2 focus:ring-purple-500 focus:outline-none">
         <option value="">Select Block</option>
         <option value="A">Block A</option>
         <option value="B">Block B</option>
         <option value="C">Block C</option>
       </select>
 
-      <input id="floor" type="number" placeholder="Floor Number" class="p-3 bg-gray-700 rounded w-full text-white"/>
+      <input id="floor" type="number" placeholder="Floor Number" class="p-4 bg-gray-700 rounded-lg w-full text-white focus:ring-2 focus:ring-purple-500 focus:outline-none"/>
 
-      <input id="name" type="text" placeholder="Tenant Name" class="p-3 bg-gray-700 rounded w-full text-white"/>
-      <input id="logoUrl" type="url" placeholder="Logo Image URL" class="p-3 bg-gray-700 rounded w-full text-white"/>
+      <input id="name" type="text" placeholder="Tenant Name" class="p-4 bg-gray-700 rounded-lg w-full text-white focus:ring-2 focus:ring-purple-500 focus:outline-none"/>
+      <input id="logoUrl" type="url" placeholder="Logo Image URL" class="p-4 bg-gray-700 rounded-lg w-full text-white focus:ring-2 focus:ring-purple-500 focus:outline-none"/>
 
-      <input id="core" type="text" placeholder="Core" class="p-3 bg-gray-700 rounded w-full text-white"/>
-      <input id="contact" type="text" placeholder="Contact Number" class="p-3 bg-gray-700 rounded w-full text-white"/>
+      <input id="core" type="text" placeholder="Core" class="p-4 bg-gray-700 rounded-lg w-full text-white focus:ring-2 focus:ring-purple-500 focus:outline-none"/>
+      <input id="contact" type="text" placeholder="Contact Number" class="p-4 bg-gray-700 rounded-lg w-full text-white focus:ring-2 focus:ring-purple-500 focus:outline-none"/>
 
-      <input id="email" type="email" placeholder="Email" class="p-3 bg-gray-700 rounded w-full text-white"/>
-      <textarea id="description" placeholder="Description" class="p-3 bg-gray-700 rounded w-full text-white resize-none"></textarea>
+      <input id="email" type="email" placeholder="Email" class="p-4 bg-gray-700 rounded-lg w-full text-white focus:ring-2 focus:ring-purple-500 focus:outline-none"/>
+      <textarea id="description" placeholder="Description" class="p-4 bg-gray-700 rounded-lg w-full text-white resize-none focus:ring-2 focus:ring-purple-500 focus:outline-none"></textarea>
     </div>
 
-    <div class="flex gap-2 mt-4">
-      <button type="submit" class="bg-green-500 hover:bg-green-600 px-6 py-2 rounded font-semibold w-full">Save Tenant</button>
-      <button type="button" id="cancelEdit" class="bg-gray-600 hover:bg-gray-700 px-6 py-2 rounded font-semibold w-full hidden">Cancel</button>
+    <div class="flex gap-4 mt-6">
+      <button type="submit" class="btn-gradient px-8 py-3 rounded-xl font-semibold shadow-lg w-full hover:scale-105 transform transition">Save Tenant</button>
+      <button type="button" id="cancelEdit" class="bg-gray-600 hover:bg-gray-500 px-8 py-3 rounded-xl font-semibold w-full hidden shadow-inner transition">Cancel</button>
     </div>
   </form>
 
   <!-- Tenant List -->
-  <h2 class="text-2xl font-bold mb-4 text-orange-400 text-center">Existing Tenants</h2>
-  <div id="tenantList" class="space-y-4 max-w-4xl mx-auto"></div>
+  <h2 class="text-3xl font-extrabold mb-6 text-center text-purple-400 drop-shadow-lg">Existing Tenants</h2>
+  <div id="tenantList" class="space-y-4 max-w-5xl mx-auto"></div>
 
-
-  <!-- 🔹 Announcements Section -->
-  <h2 class="text-3xl font-extrabold mt-12 mb-6 text-blue-400 text-center">Announcements</h2>
-  <form id="announcementForm" class="space-y-4 mb-6 bg-gray-800 p-6 rounded-lg shadow-lg max-w-3xl mx-auto">
+  <!-- Announcements -->
+  <h2 class="text-3xl font-extrabold mt-12 mb-6 text-blue-400 text-center drop-shadow-md">Announcements</h2>
+  <form id="announcementForm" class="space-y-4 mb-6 bg-gradient-to-r from-gray-800/80 to-gray-700/60 p-6 rounded-2xl shadow-xl max-w-3xl mx-auto backdrop-blur-sm border border-gray-700">
     <input id="announcementUrl" type="url" placeholder="Enter Announcement Image/Video URL"
-           class="p-3 bg-gray-700 rounded w-full text-white"/>
-    <button type="submit" class="bg-green-500 hover:bg-green-600 px-6 py-2 rounded font-semibold w-full">Save</button>
+           class="p-4 bg-gray-700 rounded-lg w-full text-white focus:ring-2 focus:ring-blue-400 focus:outline-none"/>
+    <button type="submit" class="btn-gradient px-6 py-2 rounded-xl font-semibold w-full shadow-lg">Save</button>
   </form>
   <div id="announcementList" class="space-y-4 max-w-3xl mx-auto"></div>
 
-
-  <!-- 🔹 Ads Section -->
-  <h2 class="text-3xl font-extrabold mt-12 mb-6 text-purple-400 text-center">Ads</h2>
-  <form id="adsForm" class="space-y-4 mb-6 bg-gray-800 p-6 rounded-lg shadow-lg max-w-3xl mx-auto">
+  <!-- Ads -->
+  <h2 class="text-3xl font-extrabold mt-12 mb-6 text-purple-400 text-center drop-shadow-md">Ads</h2>
+  <form id="adsForm" class="space-y-4 mb-6 bg-gradient-to-r from-gray-800/80 to-gray-700/60 p-6 rounded-2xl shadow-xl max-w-3xl mx-auto backdrop-blur-sm border border-gray-700">
     <input id="adsUrl" type="url" placeholder="Enter Ad Image/Video URL"
-           class="p-3 bg-gray-700 rounded w-full text-white"/>
-    <button type="submit" class="bg-green-500 hover:bg-green-600 px-6 py-2 rounded font-semibold w-full">Save</button>
+           class="p-4 bg-gray-700 rounded-lg w-full text-white focus:ring-2 focus:ring-purple-500 focus:outline-none"/>
+    <button type="submit" class="btn-gradient px-6 py-2 rounded-xl font-semibold w-full shadow-lg">Save</button>
   </form>
   <div id="adsList" class="space-y-4 max-w-3xl mx-auto"></div>
-
 
   <!-- Firebase + Script -->
   <script type="module">
@@ -80,11 +120,9 @@
     const db = getDatabase(app);
 
     document.addEventListener("DOMContentLoaded", () => {
-      /* ------------------ TENANTS ------------------ */
       const blockEl = document.getElementById("block");
       const floorEl = document.getElementById("floor");
       const tenantList = document.getElementById("tenantList");
-
       const nameEl = document.getElementById("name");
       const logoEl = document.getElementById("logoUrl");
       const coreEl = document.getElementById("core");
@@ -93,7 +131,6 @@
       const emailEl = document.getElementById("email");
       const addForm = document.getElementById("addForm");
       const cancelEditBtn = document.getElementById("cancelEdit");
-
       let editTenantId = null;
 
       addForm.addEventListener("submit", async (e) => {
@@ -106,11 +143,8 @@
         const description = descEl.value;
         const contact = contactEl.value;
         const email = emailEl.value;
-
         if (!block || !floor || !name) return alert("Fill at least block, floor, and name");
-
         const tenantData = { name, logo, core, description, contact, email };
-
         try {
           if (editTenantId) {
             await set(ref(db, `blocks/${block}/floors/${floor}/tenants/${editTenantId}`), tenantData);
@@ -121,9 +155,7 @@
             await set(tenantRef, tenantData);
           }
           addForm.reset();
-        } catch (err) {
-          alert("Error: " + err.message);
-        }
+        } catch (err) { alert("Error: " + err.message); }
       });
 
       cancelEditBtn.addEventListener("click", () => {
@@ -150,27 +182,23 @@
           Object.keys(data).forEach(tid => {
             const t = data[tid];
             const item = document.createElement("div");
-            item.className = "flex items-center justify-between bg-gray-800 p-4 rounded-lg shadow-md";
+            item.className = "flex items-center justify-between bg-gray-800 p-4 rounded-lg shadow-md card-hover";
 
             const left = document.createElement("div");
             left.className = "flex items-center gap-4";
-
             if (t.logo) {
               const logo = document.createElement("img");
               logo.src = t.logo;
               logo.className = "h-12 w-12 rounded";
               left.appendChild(logo);
             }
-
             const info = document.createElement("div");
             info.innerHTML = `<span class="font-bold text-lg">${t.name}</span><br><span class="text-sm text-gray-400">Floor: ${floor}</span>`;
             left.appendChild(info);
-
             item.appendChild(left);
 
             const right = document.createElement("div");
             right.className = "flex gap-2";
-
             const editBtn = document.createElement("button");
             editBtn.textContent = "Edit";
             editBtn.className = "bg-yellow-500 px-4 py-1 rounded hover:bg-yellow-600 text-sm";
@@ -204,12 +232,10 @@
       blockEl.addEventListener("change", watchTenants);
       floorEl.addEventListener("input", watchTenants);
 
-
-      /* ------------------ ANNOUNCEMENTS ------------------ */
+      // Announcements
       const announcementForm = document.getElementById("announcementForm");
       const announcementUrl = document.getElementById("announcementUrl");
       const announcementList = document.getElementById("announcementList");
-
       announcementForm.addEventListener("submit", async (e) => {
         e.preventDefault();
         if (!announcementUrl.value) return;
@@ -217,14 +243,13 @@
         await set(newRef, { url: announcementUrl.value });
         announcementForm.reset();
       });
-
       onValue(ref(db, "announcements"), (snap) => {
         const data = snap.val();
         announcementList.innerHTML = "";
         if (!data) return;
         Object.keys(data).forEach((id) => {
           const item = document.createElement("div");
-          item.className = "flex items-center justify-between bg-gray-800 p-4 rounded-lg shadow-md";
+          item.className = "flex items-center justify-between bg-gray-800 p-4 rounded-lg shadow-md card-hover";
           item.innerHTML = `<span class="truncate w-2/3">${data[id].url}</span>`;
           const delBtn = document.createElement("button");
           delBtn.textContent = "Delete";
@@ -235,12 +260,10 @@
         });
       });
 
-
-      /* ------------------ ADS ------------------ */
+      // Ads
       const adsForm = document.getElementById("adsForm");
       const adsUrl = document.getElementById("adsUrl");
       const adsList = document.getElementById("adsList");
-
       adsForm.addEventListener("submit", async (e) => {
         e.preventDefault();
         if (!adsUrl.value) return;
@@ -248,14 +271,13 @@
         await set(newRef, { url: adsUrl.value });
         adsForm.reset();
       });
-
       onValue(ref(db, "ads"), (snap) => {
         const data = snap.val();
         adsList.innerHTML = "";
         if (!data) return;
         Object.keys(data).forEach((id) => {
           const item = document.createElement("div");
-          item.className = "flex items-center justify-between bg-gray-800 p-4 rounded-lg shadow-md";
+          item.className = "flex items-center justify-between bg-gray-800 p-4 rounded-lg shadow-md card-hover";
           item.innerHTML = `<span class="truncate w-2/3">${data[id].url}</span>`;
           const delBtn = document.createElement("button");
           delBtn.textContent = "Delete";
@@ -265,6 +287,7 @@
           adsList.appendChild(item);
         });
       });
+
     });
   </script>
 </body>
