--- a/login.html
+++ b/login.html
@@ -5,30 +5,99 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Login - Adora</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <style>
+    body { font-family: 'Inter', sans-serif; }
+    .input-container { position: relative; }
+    .input-container input {
+      padding-top: 1.25rem;
+      padding-bottom: 0.5rem;
+      transition: all 0.2s ease-in-out;
+    }
+    .input-container label {
+      position: absolute;
+      left: 0.75rem;
+      top: 1rem;
+      color: #6b7280;
+      font-size: 0.875rem;
+      pointer-events: none;
+      transition: all 0.2s ease-in-out;
+    }
+    .input-container input:focus + label,
+    .input-container input:not(:placeholder-shown) + label {
+      top: 0.25rem;
+      left: 0.75rem;
+      font-size: 0.75rem;
+      color: #4f46e5; /* Corporate primary */
+    }
+  </style>
 </head>
-<body class="bg-gray-900 flex items-center justify-center min-h-screen text-white">
-  <div class="w-full max-w-md bg-gray-800 p-8 rounded-xl shadow-lg space-y-6">
-    <h2 class="text-2xl font-bold text-center text-purple-400">Login</h2>
+<body class="bg-gray-50 min-h-screen flex flex-col">
 
-    <!-- ✅ wrapped in form -->
-    <form id="login-form" class="space-y-4">
-      <input id="login-email" type="email" placeholder="Email"
-             class="w-full p-3 rounded bg-gray-700" required />
-      <input id="login-password" type="password" placeholder="Password"
-             class="w-full p-3 rounded bg-gray-700" required />
-      <button type="submit"
-              class="w-full bg-purple-600 hover:bg-purple-700 p-3 rounded">
-        Login
-      </button>
-    </form>
+  <!-- Header -->
+  <header class="bg-white shadow-md py-4">
+    <div class="container mx-auto flex items-center justify-between px-6">
+      <div class="text-2xl font-bold text-gray-800">Adora</div>
+      <nav class="space-x-6 text-gray-600 font-medium">
+        <a href="#" class="hover:text-gray-900">Home</a>
+        <a href="#" class="hover:text-gray-900">About</a>
+        <a href="#" class="hover:text-gray-900">Contact</a>
+      </nav>
+    </div>
+  </header>
 
-    <p id="login-msg" class="hidden text-center mt-2"></p>
-    <p class="text-center mt-4">
-      No account?
-      <a href="signup.html" class="text-blue-400">Sign up</a>
-    </p>
-  </div>
+  <!-- Login Form Section -->
+  <main class="flex-grow flex items-center justify-center px-4">
+    <div class="w-full max-w-md bg-white p-10 rounded-2xl shadow-xl border border-gray-200 space-y-6">
+      <div class="text-center mb-6">
+        <img src="assets/logo.png" alt="Adora Logo" class="mx-auto h-12 w-auto mb-4">
+        <h2 class="text-3xl font-bold text-gray-800 mb-2">Sign in to your account</h2>
+        <p class="text-gray-500 text-sm">Enter your credentials to access your corporate dashboard</p>
+      </div>
 
+      <form id="login-form" class="space-y-5">
+        <div class="input-container">
+          <input id="login-email" type="email" placeholder=" " class="w-full p-3 rounded-lg border border-gray-300 focus:border-blue-600 focus:ring-1 focus:ring-blue-600 outline-none" required>
+          <label for="login-email">Email</label>
+        </div>
+
+        <div class="input-container">
+          <input id="login-password" type="password" placeholder=" " class="w-full p-3 rounded-lg border border-gray-300 focus:border-blue-600 focus:ring-1 focus:ring-blue-600 outline-none" required>
+          <label for="login-password">Password</label>
+        </div>
+
+        <div class="flex items-center justify-between text-sm text-gray-500">
+          <label class="flex items-center space-x-2">
+            <input type="checkbox" class="h-4 w-4 text-blue-600 border-gray-300 rounded focus:ring-blue-500">
+            <span>Remember me</span>
+          </label>
+          <a href="#" class="hover:text-blue-600">Forgot password?</a>
+        </div>
+
+        <button type="submit" class="w-full py-3 bg-blue-600 hover:bg-blue-700 text-white rounded-lg font-semibold shadow-md transition-all duration-300">
+          Sign In
+        </button>
+      </form>
+
+      <p class="text-center text-gray-500 text-sm">
+        Don't have an account? <a href="signup.html" class="text-blue-600 hover:underline">Sign up</a>
+      </p>
+    </div>
+  </main>
+
+  <!-- Script -->
   <script type="module" src="assets/js/account.js"></script>
+  
+  <!-- Footer -->
+  <footer class="bg-white border-t border-gray-200 py-6 mt-12">
+    <div class="container mx-auto px-6 flex flex-col md:flex-row justify-between items-center text-gray-500 text-sm space-y-2 md:space-y-0">
+      <p>© 2025 Adora. All rights reserved.</p>
+      <div class="space-x-4">
+        <a href="#" class="hover:text-gray-900">Privacy Policy</a>
+        <a href="#" class="hover:text-gray-900">Terms of Service</a>
+        <a href="#" class="hover:text-gray-900">Support</a>
+      </div>
+    </div>
+  </footer>
 </body>
 </html>
